# miniGU

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  deny.toml  rust-toolchain.toml
docs/: catalog_txn.md  (+6 more)
minigu-test/: Cargo.toml  README.md  e2e_test.rs  parser_test.rs
minigu-test/benches/: parse.rs
minigu-test/data/basic/: friend.csv  manifest.json  person.csv
minigu-test/gql/basic/: data_setup_example.gql  data_setup_example@e2e.snap  multi_statement_test.gql  multi_statement_test@e2e.snap  multi_statement_test@parser.snap
minigu-test/gql/dcl/: session_set.gql  session_set@e2e.snap  session_set@parser.snap
minigu-test/gql/ddl/: create_drop_vector_index.gql  create_drop_vector_index@e2e.snap  create_drop_vector_index@parser.snap  create_graph.gql  create_graph@e2e.snap  create_graph@parser.snap  create_schema.gql  create_schema@e2e.snap  create_schema@parser.snap  ddl_drop@e2e.snap  ddl_drop@parser.snap  ddl_truncate@e2e.snap  ddl_truncate@parser.snap
minigu-test/gql/dml/: dml_dql@e2e.snap  dml_dql@parser.snap  insert.gql  insert@e2e.snap  insert@parser.snap  match.gql  match@e2e.snap  match@parser.snap  match_and_insert.gql  match_and_insert@e2e.snap  match_and_insert@parser.snap
minigu-test/gql/dql/: dql.gql  dql@e2e.snap  dql@parser.snap  vector_search.gql  vector_search@e2e.snap  vector_search@parser.snap
minigu-test/gql/finbench/: tsr1.gql  tsr1@parser.snap  tsr2.gql  tsr2@e2e.snap  tsr2@parser.snap  tsr3.gql  tsr3@e2e.snap  tsr3@parser.snap  tsr4.gql  tsr4@parser.snap  tsr5.gql  tsr5@parser.snap  tsr6.gql  tsr6@parser.snap
minigu-test/gql/finbench/tsr1/: tsr1@parser.snap
minigu-test/gql/finbench/tsr2/: tsr2@e2e.snap  tsr2@parser.snap
minigu-test/gql/finbench/tsr3/: tsr3@e2e.snap
minigu-test/gql/finbench/tsr4/: tsr4@parser.snap
minigu-test/gql/finbench/tsr5/: tsr5@parser.snap
minigu-test/gql/gql_on_one_page/gql_on_one_page/: gql_on_one_page@e2e.snap  gql_on_one_page@parser.snap
minigu-test/gql/misc/: ddl_drop@e2e.snap  ddl_drop@parser.snap  ddl_truncate@parser.snap  dml_dql@parser.snap  text2graph.gql  text2graph@e2e.snap  text2graph@parser.snap  vector_index@e2e.snap  vector_index@parser.snap
minigu-test/gql/misc/ddl_truncate/: ddl_truncate@e2e.snap
minigu-test/gql/misc/dml_dql/: dml_dql@e2e.snap
minigu-test/gql/misc/vector_index/: vector_index@e2e.snap
minigu-test/gql/opengql/: create_graph@e2e.snap  create_schema@e2e.snap  create_schema@parser.snap  insert@parser.snap  match@e2e.snap  match_and_insert@e2e.snap  match_and_insert@parser.snap  session_set@e2e.snap  session_set@parser.snap
minigu-test/gql/opengql/create_graph/: create_graph@e2e.snap  create_graph@parser.snap
minigu-test/gql/opengql/create_schema/: create_schema@e2e.snap
minigu-test/gql/opengql/insert/: insert@e2e.snap
minigu-test/gql/opengql/match/: match@parser.snap
minigu-test/gql/snb/: is1.gql  is1@parser.snap  is2.gql  is2@parser.snap  is3.gql  is3@e2e.snap  is3@parser.snap  is4.gql  is4@e2e.snap  is4@parser.snap  is5.gql  is5@parser.snap  is6.gql  is6@e2e.snap  is6@parser.snap  is7.gql  is7@e2e.snap  is7@parser.snap
minigu-test/gql/snb/is1/: is1@e2e.snap
minigu-test/gql/snb/is2/: is2@parser.snap
minigu-test/gql/snb/is3/: is3@parser.snap
minigu-test/gql/snb/is4/: is4@parser.snap
minigu-test/gql/snb/is7/: is7@e2e.snap  is7@parser.snap
minigu-test/gql/utility/: explain_call.gql  explain_call@e2e.snap  explain_call@parser.snap  explain_create_vector_index.gql  explain_create_vector_index@e2e.snap  explain_create_vector_index@parser.snap  explain_drop_vector_index.gql  explain_drop_vector_index@e2e.snap  explain_drop_vector_index@parser.snap  explain_filter.gql  explain_filter@e2e.snap  explain_filter@parser.snap  explain_limit.gql  explain_limit@e2e.snap  explain_limit@parser.snap  explain_logical_match.gql  explain_logical_match@e2e.snap  explain_logical_match@parser.snap  explain_offset.gql  explain_offset@e2e.snap  explain_offset@parser.snap  explain_one_row.gql  explain_one_row@e2e.snap  explain_one_row@parser.snap  explain_sort.gql  explain_sort@e2e.snap  explain_sort@parser.snap  explain_vector_index_scan.gql  explain_vector_index_scan@parser.snap  explain_vector_limit_approx.gql  explain_vector_limit_approx@e2e.snap  explain_vector_limit_approx@parser.snap  explain_vector_limit_exact.gql  explain_vector_limit_exact@e2e.snap  explain_vector_limit_exact@parser.snap
minigu-test/gql/utility/explain_call/: explain_call.gql  explain_call@parser.snap
minigu-test/src/: insta_test.rs  slt_adapter.rs  sqllogictest.rs
minigu/catalog/: Cargo.toml
minigu/catalog/src/: error.rs  label_set.rs  lib.rs  provider.rs  transaction.rs
minigu/catalog/tests/: catalog_txn_executor_integration_tests.rs
minigu/transaction/: Cargo.toml
minigu/transaction/src/: lib.rs  lightning_graph.rs  manager.rs  timestamp.rs  transaction.rs
(+219 files in other folders)
