[package]
edition.workspace = true
license.workspace = true
name = "minigu-catalog"
repository.workspace = true
version.workspace = true

[dependencies]
minigu-common = { workspace = true }
minigu-transaction = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true, features = ["union", "serde"] }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
minigu-context = { workspace = true }
minigu-storage = { workspace = true }

[lints]
workspace = true
