[package]
edition.workspace = true
license.workspace = true
name = "minigu-catalog"
repository.workspace = true
version.workspace = true

[dependencies]
downcast-rs = { workspace = true }
minigu-common = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
serde = { workspace = true }
smallvec = { workspace = true, features = ["union", "serde"] }
smol_str = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[lints]
workspace = true
