[package]
edition = { workspace = true }
license = { workspace = true }
name = "minigu-transaction"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-storage = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
